RoomService.roomList 코드 수정